--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt --hostname '18.218.36.147' --port 8000",
-    "build": "nuxt build",
+    "dev": "nuxt --hostname '0.0.0.0' --port 8000",
+    "build": "nuxt build --hostname '0.0.0.0' --port 8000",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
