--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,8 +18,9 @@
     "nuxt": "^2.14.12",
     "vue-client-only": "^2.0.0",
     "vue-multiselect": "^2.1.6",
-    "vue-slider-component": "^3.2.11",
-    "vue-scrollto": "^2.20.0"
+    "vue-scrollto": "^2.20.0",
+    "vue-simple-suggest": "^1.11.1",
+    "vue-slider-component": "^3.2.11"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
