--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/style-resources": "^1.2.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.2",
     "nuxt": "^2.14.12",
+    "read-excel-file": "^5.2.10",
     "vue-client-only": "^2.0.0",
     "vue-multiselect": "^2.1.6",
     "vue-scrollto": "^2.20.0",
@@ -24,7 +26,7 @@
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nuxtjs/fontawesome": "^1.1.2"
   }
 }
